# n3gb-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml  security.yml
examples/: arrow_export.rs  cell_basics.rs  check_proj.rs  csv_hex_density.rs  gas_pipe_hexgrid.rs  grid_distance.rs  grid_from_polygon.rs  grid_to_csv.rs  line_coverage.rs
src/: cell.rs  dimensions.rs  error.rs  grid.rs  lib.rs  main.rs
src/api/: cell.rs  hex_arrow.rs  hex_cell.rs  hex_csv.rs  hex_grid.rs  hex_parquet.rs  mod.rs
src/coord/: bng_transformations.rs  mod.rs
src/core/: constants.rs  dimensions.rs  geometry.rs  grid.rs  mod.rs
src/geom/: hexagon.rs  mod.rs  parse.rs
src/index/: identifier.rs  indexing.rs  mod.rs
src/io/: arrow.rs  csv.rs  mod.rs  parquet.rs
src/util/: coord.rs  error.rs  identifier.rs  mod.rs
