[package]
name = "n3gb-rs"
version = "0.2.2"
edition = "2024"
description = "A Rust implementation of a hierarchical hex-based spatial indexing system based on the OSGB National Grid."
license = "Apache-2.0"
repository = "https://github.com/CHRISCARLON/n3gb-rs"
keywords = ["hex", "grid", "gis", "geoparquet", "arrow"]

[dependencies]
arrow-array = "56.2.0"
csv = "1.3"
arrow-schema = "56.2.0"
base64 = "0.22.1"
geo = "0.32.0"
geo-types = "0.7.18"
geoarrow = "0.6.2"
geojson = "0.24"
wkt = "0.11"
geoarrow-array = "0.6.2"
geoarrow-schema = "0.6.2"
geoparquet = "0.6.2"
parquet = { version = "56.2.0", features = ["arrow"] }
proj = "0.31.0"
rayon = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lonlat_bng = { version = "0.9.0", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["ostn15"]
# OSTN15 conversion backend, provided by the `lonlat_bng` crate. Enabled by
# default. Turned off on docs.rs (see [package.metadata.docs.rs]) because
# lonlat_bng's build script runs cbindgen, which shells out to `cargo metadata`
# and needs network access that the docs.rs sandbox forbids.
ostn15 = ["dep:lonlat_bng"]

[package.metadata.docs.rs]
no-default-features = true

[lints.clippy]
all = "warn"
